...

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view, typically from a nib.
    
    UIBarButtonItem * item = [[UIBarButtonItem alloc] initWithBarButtonSystemItem:UIBarButtonSystemItemAdd target:self action:@selector(doRightBarItemPressed:)];
    item.accessibilityIdentifier = @"testitem";
    self.navigationItem.rightBarButtonItem = item;

    self.title = @"StoCard";
    
    self.view.backgroundColor = [UIColor lightGrayColor];
    
    _dataArray = [[NSMutableArray alloc] init];
    [_dataArray addObjectsFromArray:[[DBHelper shared] allCards]];
    
...
