...
- (void)save {
    if (_textField.text == nil || _textField.text.length == 0) {
        UIAlertView * alert = [[UIAlertView alloc] initWithTitle:@"" message:@"请输入Card Name" delegate:self cancelButtonTitle:@"OK" otherButtonTitles:nil, nil];
        [alert show];
    }else {
        if ([[DBHelper shared] existWithCardName:_textField.text]) {
            UIAlertView * alert = [[UIAlertView alloc] initWithTitle:@"" message:[NSString stringWithFormat:@"已经存在名称为%@的卡，是否要覆盖原来的卡？",_textField.text] delegate:self cancelButtonTitle:@"Cancel" otherButtonTitles:@"OK", nil];
            [alert show];
        }else {
            [self saveCard];
        }
    }
}
...
